Splash Screen ve Logo eklendi.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yayinlanmadi">#5116BA</color>
     <color name="reddedildi">#FF0000</color>
     <color name="green">#673ab7</color>
+    <color name="turuncu">#ffde59</color>
 </resources>
