--- a/app/src/main/res/layout/profileads_row.xml
+++ b/app/src/main/res/layout/profileads_row.xml
@@ -37,7 +37,7 @@
                 android:background="@color/mor"
                 android:gravity="center"
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/turuncu"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -102,7 +102,7 @@
                     android:layout_weight="1"
                     android:background="@color/mor"
                     android:text="DÜZENLE"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/turuncu"
                     android:textSize="14sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -113,7 +113,7 @@
                     android:layout_weight="1"
                     android:background="@color/mor"
                     android:text="SİL"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/turuncu"
                     android:textSize="14sp" />
             </LinearLayout>
 
