--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -9,7 +9,7 @@
     android:gravity="bottom"
     android:orientation="vertical">
 
-    <TextView
+    <ImageView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,7 +19,8 @@
         android:text="Petbull"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        app:srcCompat="@drawable/logo" />
 
 
     <com.google.android.gms.common.SignInButton
